--- a/personal_assistant/app_notes/templates/app_notes/index.html
+++ b/personal_assistant/app_notes/templates/app_notes/index.html
@@ -8,19 +8,17 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'app_notes/css/styles.css' %}">
 
-
-    <div class="h-screen py-6">
         <nav class="mb-5 border-b-4">
             <ul class="flex items-center justify-center gap-3 mb-10">
-                <li><a class="text-black px-5 py-2 border-2 border-lip rounded-lg bg-gradient-to-r from-indigo-600 to-indigo-400 hover:bg-gradient-to-l hover:from-indigo-600 hover:to-indigo-400 transition" href="/app_notes/note/" role="button">Add note</a></li>
-                <li><a class="text-black px-5 py-2 border-2 border-lip rounded-lg bg-gradient-to-r from-indigo-600 to-indigo-400 hover:bg-gradient-to-l hover:from-indigo-600 hover:to-indigo-400 transition" href="/app_notes/tag/" role="button">Add Tag</a></li>
+                <a href="/app_notes/note/" class="btn btn-primary">Add Note</a>
+                <a href="/app_notes/tag/" class="btn btn-primary">Add Tag</a>
             </ul>
         </nav>
-        <h4 class="font-medium leading-tight text-lg text-gray-300 mb-1">Search:</h4>
+        <h3 class="font-medium leading-tight text-lg text-gray-300 mb-1" style="text-align: center;">Search:</h3>
 
         <form action="{% url 'app_notes:search_note' %}" method="get" class="flex mb-8">
             <input class="w-full rounded-lg border-lip" name="q" type="text" placeholder="Enter the name of the note...">
-            <button type="submit" class="bg-indigo-600 hover:bg-indigo-800 text-white font-bold py-2 px-4 rounded-l">Search</button>
+            <button type="submit" class="text-white font-bold py-2 px-4 rounded-l">Search</button>
         </form>
 
         <table class="min-w-full text-center border shadow">
@@ -65,5 +63,4 @@
                 {% endif %}
             </span>
         </div>
-    </div>
 {% endblock %}
