--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -81,7 +81,7 @@
       <a href="#" class="d-flex align-items-center text-white text-decoration-none" data-bs-toggle="dropdown" aria-expanded="false">
         <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
         {% if user.is_authenticated %}
-           <strong>Username </strong><span style="color: #00c000"> &#9679;</span>
+           <strong>{{user.username}}</strong><span style="color: #00d000"> &#9679;</span>
         {% else %}
            <strong>Username </strong>
         {% endif %}
