--- a/personal_assistant/app_contacts/templates/app_contacts/all_contacts.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/all_contacts.html
@@ -20,23 +20,29 @@
 
     <a href="{% url 'app_contacts:search_contacts' %}" class="btn btn-primary">Search Contact</a>
 
-    <div class="pagination">
-        <span class="step-links">
+    <nav>       
+        <ul class="pager">
             {% if contacts.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ contacts.previous_page_number }}">previous</a>
+            <li class="previous">
+                <a href="{% url 'app_contacts:main_paginate' contacts.previous_page_number %}">
+                    <span aria-hidden="true">←</span> Previous
+                </a>
+            </li>    
             {% endif %}
-
-            <span class="current">
-                Page {{ contacts.number }} of {{ contacts.paginator.num_pages }}.
-            </span>
-
             {% if contacts.has_next %}
-                <a href="?page={{ contacts.next_page_number }}">next</a>
-                <a href="?page={{ contacts.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
+            <li class="next">
+                <a href="{% url 'app_contacts:main_paginate' contacts.next_page_number %}">Next
+                    <span aria-hidden="true">→</span>
+                </a>
+            </li>
+            {% endif %}       
+        </ul>
+    </nav>
     </div>
+    
+    </div>   
+</div>
+    
 {% else %}
     <p>No contacts available.</p>
 {% endif %}
