--- a/personal_assistant/app_notes/templates/app_notes/note.html
+++ b/personal_assistant/app_notes/templates/app_notes/note.html
@@ -8,12 +8,14 @@
 
   <link rel="stylesheet" type="text/css" href="{% static 'app_notes/css/styles.css' %}">
 
-    <nav class="mb-5 border-b-4">
-        <ul class="flex items-center justify-center gap-3 mb-10">
-          <a href="/app_notes/" class="btn btn-primary"><i class="fa fa-angle-double-left" aria-hidden="true"></i> Back to Notes</a>
-          <a href="/app_notes/tag/" class="btn btn-primary">Add Tag</a>
-        </ul>
-    </nav>
+  <nav class="mb-5 border-b-4">
+    <div class="card"  style="border-color: white;">
+			<div class="card-body">
+        <a href="/app_notes/" class="btn btn-primary"><i class="fa fa-angle-double-left" aria-hidden="true"></i> Back to Notes</a>
+        <a href="/app_notes/tag/" class="btn btn-primary">Add Tag</a>
+			</div>
+		</div>
+  </nav>
 
   <h2 style="text-align: center;">Create Note</h2>
   <!-- Note Creation Form -->
