small front-design fix signin/detail.

--- a/personal_assistant/users/templates/users/signin.html
+++ b/personal_assistant/users/templates/users/signin.html
@@ -36,8 +36,8 @@
         <span>{{form.errors.password}}</span>
     </div>
     <button type="submit" class="btn btn-primary">Sing In</button>
-    <div class="small text-center">
-        <a href="{% url 'users:password_reset' %}" class="text-center"><i>Forgot Password?</i></a>
+    <div class="small" style="padding-top: 15px;">
+        <a href="{% url 'users:password_reset' %}">Forgot Password?</a>
     </div>
 </form>
 {% endblock %}
