Fixed style margin-top: 40/20

--- a/personal_assistant/app_notes/templates/app_notes/detail.html
+++ b/personal_assistant/app_notes/templates/app_notes/detail.html
@@ -57,7 +57,7 @@
             </h5>
             <div class="card-body">
                 <div class="note-details">
-                    <h2 style="margin-top: 20px;">{{ note.name }}</h2>
+                    <h2>{{ note.name }}</h2>
                 </div>
 
                 <!---<p class="card-text"><strong>Description:</strong> {{ note.description }}</p>--->
