Initial commit Bootstrap: docs.css (extended styles, v5.0)

--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -12,6 +12,7 @@
     
     {% load static %}
     <link rel="stylesheet" href="{% static 'app_assistant/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'app_assistant/docs.css' %}">
     <link rel="stylesheet" href="{% static 'app_assistant/css/all.min.css' %}">    
 
     <title>{{title}}</title>
