Fixed titles for index.html/logout.html; added stub icon for News.

--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -52,6 +52,12 @@
       </li>
       <li>
         <a class="nav-link text-white" href="#">
+          <i class="fa-solid fa-earth-americas"></i>
+          <span class="nav-item">News</span>
+        </a>
+      </li>
+      <li>
+        <a class="nav-link text-white" href="#">
           <i class="fa-solid fa-folders"></i>
           <span class="nav-item">Files browser</span>
         </a>
