--- a/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
@@ -19,7 +19,7 @@
 
   <div class="form-group">
     <label for="birthday">Дата народження:</label>
-    <input type="date" id="birthday" name="birthday" value="{{ birthday_str.birthday_str }}" class="form-control">
+    <input type="text" id="birthday" name="birthday" value="{{ contact.birthday|date:'d.m.Y' }}" class="form-control">
   </div>
 
   <div class="form-group">
