add new view edit_note and a little bit fix front

--- a/personal_assistant/app_news/templates/app_news/scrape_news.html
+++ b/personal_assistant/app_news/templates/app_news/scrape_news.html
@@ -1,11 +1,65 @@
 {% extends "app_assistant/base.html" %}
 
 {% block content %}
+<nav class="mb-5 border-b-4">
+    <ul class="flex items-center justify-center gap-3 mb-10">
+        <li><a class="text-gray-900 px-5 py-2 border-2 border-lip rounded-lg bg-gradient-to-r from-indigo-600 to-indigo-400 hover:bg-gradient-to-l hover:from-indigo-600 hover:to-indigo-400 transition" href="{% url 'app_news:sport' %}" role="button">SportNews</a></li>
+        <li><a class="text-gray-900 px-5 py-2 border-2 border-lip rounded-lg bg-gradient-to-r from-indigo-600 to-indigo-400 hover:bg-gradient-to-l hover:from-indigo-600 hover:to-indigo-400 transition" href="{% url 'app_news:currency' %}" role="button">Currency</a></li>
+        <li><a class="text-gray-900 px-5 py-2 border-2 border-lip rounded-lg bg-gradient-to-r from-indigo-600 to-indigo-400 hover:bg-gradient-to-l hover:from-indigo-600 hover:to-indigo-400 transition" href="{% url 'app_news:weather' %}" role="button">Weather</a></li>
+        <li><a class="text-gray-900 px-5 py-2 border-2 border-lip rounded-lg bg-gradient-to-r from-indigo-600 to-indigo-400 hover:bg-gradient-to-l hover:from-indigo-600 hover:to-indigo-400 transition" href="{% url 'app_news:form_news' %}" role="button"> Go back to the main page </a></li>
+    </ul>
+</nav>
+
+<!--<div style="display: flex; flex-direction: row;">-->
+<!--    <div style="margin-right: 20px;">-->
+<!--        <p><strong>Category</strong></p>-->
+<!--        <p>News</p>-->
+<!--        <p>Sport News</p>-->
+<!--        <p>Currency</p>-->
+<!--        <p>Weather</p>-->
+<!--    </div>-->
+<!--    <div>-->
+<!--        <p><strong>Link</strong></p>-->
+<!--        <p><a href="{% url 'app_news:news' %}">Go to News</a></p>-->
+<!--        <p><a href="{% url 'app_news:sport' %}">Go to Sport News</a></p>-->
+<!--        <p><a href="{% url 'app_news:currency' %}">Go to Currency</a></p>-->
+<!--        <p><a href="{% url 'app_news:weather' %}">Go to Weather</a></p>-->
+<!--    </div>-->
+<!--</div>-->
+    <style>
+        /* Стилі для табличі */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
+
     <h1>News</h1>
-    {% for item in news %}
-        <div>
-            <p>{{ item.time }}</p>
-            <h2>{{ item.title }}</h2>
-        </div>
-    {% endfor %}
+    <table>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Title</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in news %}
+                <tr>
+                    <td>{{ item.time }}</td>
+                    <td>{{ item.title }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
