--- a/personal_assistant/app_notes/templates/app_notes/detail.html
+++ b/personal_assistant/app_notes/templates/app_notes/detail.html
@@ -8,8 +8,10 @@
     <div class="h-screen py-6">
 
         <nav class="mb-5 border-b-4">
-            <div class="card"  style="border-color: white;">
+            <div class="card" style="border-color: white;">
                 <div class="card-body">
+                    <a href="{% url 'app_notes:edit_note' note_id=note.id %}" class="btn btn-primary">
+                        Edit Note</a>
                     <a href="/app_notes/" class="btn btn-primary">
                         <i class="fa fa-angle-double-left" aria-hidden="true"></i> Back to Notes</a>
                 </div>
@@ -36,7 +38,6 @@
                 font-weight: bold;
                 background-color: green;
                 padding-top: 0.8em;
-
                 padding-bottom: 0.8em;
                 padding-left: 1.2em;
                 padding-right: 1.2em;
@@ -47,7 +48,6 @@
                 background-color: #A887F9;
                 font-weight: bold;
                 padding-top: 0.8em;
-
                 padding-bottom: 0.8em;
                 padding-left: 1.2em;
                 padding-right: 1.2em;
@@ -56,20 +56,17 @@
 
         <div class="card" style="width: 60rem;">
             <h5 class="card-header">
-            Details
+                Details
             </h5>
             <div class="card-body">
                 <div class="note-details">
                     <h2 style="padding-left: 1rem;">{{ note.name }}</h2>
                 </div>
 
-                <!---<p class="card-text"><strong>Description:</strong> {{ note.description }}</p>--->
-                <!---<p class="card-text"><strong>Date:</strong> {{ note.created.date }}</p>--->
-
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>Description:</strong> {{ note.description }}</li>
                     <li class="list-group-item"><strong>Date:</strong> {{ note.created.date }}</li>
-                    
+
                     <li class="list-group-item">
                     {% if note.done %}
                         <strong>Status:</strong>
@@ -84,12 +81,12 @@
         </div>
 
         <div class="note-details">
-            {% if note.tag_list %}
-               <p><strong>Tags:</strong> <small>{{ note.tag_list }}</small></p>
-            {% else %}
-               <p><strong>Tags:</strong> empty</p>
-            {% endif %}
+            <p><strong>Tags:</strong>
+            {% for tag in note.tags.all %}
+                {{ tag.name }}
+                {% if not forloop.last %}, {% endif %}
+            {% endfor %}
+            </p>
         </div>
     </div>
 {% endblock %}
-
