--- a/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
@@ -24,19 +24,26 @@
 
   <div class="form-group">
     <label for="phone_numbers">Номера телефонів:</label>
-    {% for phone_number in contact.phone_numbers.all %}
+    
+    {% if contact.phone_numbers.all %}        {% for phone_number in contact.phone_numbers.all %}
       <input type="text" name="phone_numbers" value="{{ phone_number.phone_number }}" class="form-control mb-2">
       <a href="{% url 'app_contacts:delete_phone' pk=phone_number.pk %}" class="btn btn-danger">Видалити</a>
+      
     {% endfor %}
+    {% else %}
+      <p>Немає жодного номера телефону.</p>      {% endif %}
+    
     <a href="{% url 'app_contacts:add_phone_number' pk=contact.pk %}" class="btn btn-primary">Добавити номер телефону</a>
   </div>
 
   <div class="form-group">
     <label for="email_addresses">Email адреси:</label>
+     
     {% for email_address in contact.email_addresses.all %}
       <input type="email" name="email_addresses" value="{{ email_address.email }}" class="form-control mb-2">
       <a href="{% url 'app_contacts:delete_email' pk=email_address.pk %}" class="btn btn-danger">Видалити</a>
     {% endfor %}
+    
     <a href="{% url 'app_contacts:add_email_address' pk=contact.pk %}" class="btn btn-primary">Добавити email адресу</a>
   </div>
 
